style fixes
-fixed the details panel so it doesn't cause a scrollbar when it becomes hidden
-moved the details panel toggle button so its at the level of the heading

--- a/app/css/angello.css
+++ b/app/css/angello.css
@@ -1,8 +1,8 @@
 html,
 body {
-    height: 100%;
     background-color: #36393D;
-    background: url(../img/bg-wood.jpg)
+    background: url(../img/bg-wood.jpg);
+    overflow: hidden;
 }
 
 .navbar {
@@ -94,7 +94,7 @@ body {
 }
 
 .details-nav .btn {
-    margin-top: 12px;
+    margin-top: 48px;
 }
 
 .chart {
